--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
 
 /* Your CSS Code here. */
+.holder{
+	display:flex;
+	flex-direction:fullscreen;
+	height:100%;
+	width:100%;
+	justify-content:center;
+	align-items:center;
+position:center;
+	
+	
+	
+}
+.item{
+	border:1px solid black;
+	
+}
